tests/expected_invalid_generic_call_missing_args.diag.out
<input>:9:5: error: generic function 'identity' requires explicit type arguments
        support::identity(7)
        ^^^^^^^^^^^^^^^^^^^^
